# JetsonMiniFan

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  install.sh  jetson-mini-fan.service  jetson_mini_fan.c  uninstall.sh
